@@ -1,0 +1,2 @@
+json.extract! game, :id, :title, :created_at, :updated_at
+json.url game_url(game, format: :json)
