@@ -1,0 +1,6 @@
+<h1>Editing Game</h1>
+
+<%= render 'form', game: @game %>
+
+<%= link_to 'Show', @game %> |
+<%= link_to 'Back', games_path %>
