@@ -1,0 +1,1 @@
+json.array! @games, partial: 'games/game', as: :game
