@@ -1,0 +1,5 @@
+<h1>New Game</h1>
+
+<%= render 'form', game: @game %>
+
+<%= link_to 'Back', games_path %>
