@@ -1,0 +1,1 @@
+json.partial! "games/game", game: @game
