@@ -1,0 +1,14 @@
+require 'rails_helper'
+
+RSpec.describe "games/show", type: :view do
+  before(:each) do
+    @game = assign(:game, Game.create!(
+      :title => "Title"
+    ))
+  end
+
+  it "renders attributes in <p>" do
+    render
+    expect(rendered).to match(/Title/)
+  end
+end
