@@ -18,3 +18,4 @@ Changelog
 + Signup page styling
 + Added basic-style.scss to stylesheets and manifest
 + Removed minitest tests and added first rspec test
++ Scaffolded Games
